schema/testdata/validation_set_invalid_operators/schema.keel
model Post {
    fields {
        views Number
    }

    actions {
        update incrementViews(id) {
            @set(post.views += 1)
        }

        update decrementViews(id) {
            @set(post.views -= 1)
        }

        update compareViews(id) {
            @set(post.views == 1)
        }
    }
}
