schema/testdata/errors/expression_enum_set_with_invalid_rhs_operators.keel
model Thing {
    fields {
        number Number
    }

    actions {
        update updateThing1(id) {
            //expect-error:31:32:AttributeExpressionError:operator '+' not supported in this context
            @set(thing.number = thing.number + 1)
        }
    }
}

enum PostStatus {
    Published
    Draft
}

enum OtherPostStatus {
    Something
    Else
}
